# Lifeflow

./: .gitignore  LICENSE  README.md
.github/workflows/: release.yml
.kiro/specs/category-list-management/: design.md  requirements.md  tasks.md
.kiro/specs/lifeflow/: design.md  requirements.md  tasks.md
.kiro/specs/lifeflow-v2/: design.md  requirements.md  tasks.md
.kiro/specs/notification-system/: design.md  requirements.md  tasks.md
.kiro/steering/: language.md
docs/: ROADMAP.md  api-reference.md  architecture.md  backend.md  code-stats.md  deployment.md  development.md  frontend.md  index.md  overview.md
src/backend/: build_backend.py  lifeflow.spec  pyproject.toml  requirements.txt  run_server.py  seed_data.py
src/backend/app/: __init__.py  config.py  database.py  main.py
src/backend/app/api/: life_entries.py  lists.py  notifications.py  settings.py  stats.py  tasks.py
src/backend/app/models/: __init__.py  card_list.py  checkin_record.py  life_entry.py  notification.py  setting.py  task_card.py
src/backend/app/schemas/: __init__.py  card_list.py  checkin_record.py  life_entry.py  notification.py  setting.py  stats.py  task_card.py
src/backend/app/services/: notification_service.py
src/backend/tests/: __init__.py  conftest.py  test_daily_ring_api.py  test_health.py  test_life_entries_api.py  test_notification_property.py  test_settings_api.py  test_settings_property.py  test_tasks_api.py
src/frontend/: .gitignore  components.json  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+111 files in other folders)
